--- a/_sass/blocks/how-it-works/_subpage_steps.scss
+++ b/_sass/blocks/how-it-works/_subpage_steps.scss
@@ -79,6 +79,9 @@ $onshore-renewables-secondary-color: $blue;
   padding-bottom: $base-padding;
 
   p {
+    @include heading('para-md');
+    padding-right: $base-padding-lite;
+
     @include respond-to(medium-up) {
       padding-left: 56px;
     }
@@ -146,5 +149,5 @@ $onshore-renewables-secondary-color: $blue;
   border: 2px solid $mid-gray;
   margin-right: 8px;
   padding-left: 11px;
-  padding-top: 8px;
+  padding-top: 5px;
 }
